--- a/example/index.html
+++ b/example/index.html
@@ -35,6 +35,8 @@
         var user_3 = users.list.addChild();
         user_3.photo.src('images/user_photo_3.png');
         user_3.name.html('ALYS');
+		
+		var user_4 = UIBuilder('user').build(document.body);
     });
     function deleteUser(){this.remove();}
 </script>
