--- a/tests/Dropdowns/tabs-test.html
+++ b/tests/Dropdowns/tabs-test.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>UIBuilder | Gathering test</title>
+		<title>UIBuilder | Tabs test</title>
 		<script src="../../src/UIBuilder.js"></script>
 		<script src="ui.js"></script>
 		<style>
 			section{
+				max-width: 800px;
 				padding: 10px;
 				margin: 10px;
 				position: relative;
@@ -13,7 +14,7 @@
 			p{ 
 				position: relative;
 				font-family: monospace;
-				margin-bottom: 15px ;
+				margin-bottom: 15px;
 			}
 			h1{
 				margin-bottom: 10px ;
@@ -23,14 +24,13 @@
 	</head>
 	<body>
 		<section id="test-1">
-			<h1>Simple form example</h1>
+			<h1>Default behavior</h1>
 			<p>
-				Data gathering allows you to compose data structure of forms even if you use different UIs in the form.<br/>
-				Click "Gather" button to see what data will be gathered for the given form.
+				Ensure that all tabs instance works stand-alone.
 			</p>
 			<script>
 				var cont = document.getElementById('test-1');
-				UI('Form 1').renderTo(cont);
+				UI('Layout').renderTo(cont);
 			</script>
 		</section>
 	</body>
