Routes added. Implemented url manager. Fixed some issues.

--- a/tests/Animation/animation-test.html
+++ b/tests/Animation/animation-test.html
@@ -42,8 +42,8 @@
 			<p>Click "Run" button to see animations in action.</p>
 			<br/>
 			<script>
-				UI('Test 1').renderTo('#test-1').load({text : 'Some new cool alert content.'});
-				UI('Test 2').renderTo('#test-1').load({text : 'Some new cool alert content.'});
+				var test_1 = UI('Test 1').renderTo('#test-1').load({text : 'Some new cool alert content.'});
+				var test_2 = UI('Test 2').renderTo('#test-1').load({text : 'Some new cool alert content.'});
 			</script>
 		</section>
 	</body>
