Extensions added. Fixed some issues.

--- a/example/index.html
+++ b/example/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="container"></div>
-<script src="../src/uibuilder.js"></script>
+<script src="../dist/ui-builder.js"></script>
 <script src="ui.js"></script>
 <script>
     var TasksList = UI('Tasks list').renderTo('#container', {width : 600, height : 400});
